--- a/blockchain/src/app/globals.css
+++ b/blockchain/src/app/globals.css
@@ -31,3 +31,41 @@ body {
     text-wrap: balance;
   }
 }
+
+
+
+
+/* styles/globals.css */
+
+.confetti {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: 9999;
+}
+
+.confetti-piece {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: rgba(255, 223, 0, 0.8);
+  opacity: 0;
+  border-radius: 50%;
+  animation: confetti-fall 2s ease-in-out forwards;
+}
+
+@keyframes confetti-fall {
+  0% {
+    transform: translateY(-100px) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100vh) rotate(360deg);
+    opacity: 0;
+  }
+}
+
